# fabricaOvino_Backend

./: .env_sample  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: README.md  settings.py  urls.py
backend/core/: admin.py  apps.py  permissions.py  router.py
backend/core/migrations/: 0001_initial.py  0002_breed.py  0002_pregnancydiagnosis.py  0003_group.py  0003_sheep.py  0004_auto_20200414_1734.py  0004_delete_group.py  0005_auto_20200506_1701.py  0006_auto_20200506_1713.py  0007_auto_20200506_1713.py  0008_auto_20200506_1716.py  0009_sheep_pregnant.py  0010_auto_20200513_1715.py  0011_sheep_lactating.py  0012_feed.py  0013_breed_nickname.py  0013_shearing.py  (+13 more)
docs/: codesYuml.txt
frontend/: .editorconfig  .eslintrc.js  .prettierrc  README.md  nuxt.config.js  package-lock.json  package.json
frontend/.nuxt/: App.js  axios.js  buefy.js  client.js  index.js  router.js  server.js  store.js  toast.js
frontend/components/: FormLogin.vue
frontend/layouts/: Header.vue  Menu.vue  default.vue
frontend/middleware/: lang.js
frontend/pages/: birth.vue  breed.vue  category.vue  feed.vue  index.vue  login.vue  logout.vue  lots.vue  lotsLoad.vue  me.vue  pregnancyDiagnosis.vue  shearing.vue  sheep.vue
frontend/plugins/: auth-lang-redirect.js  auth.js  axios-conf.js  axios.js  global.js  vee-validate.js
frontend/store/: index.js  login.js
tests/: conftest.py
tests/integration/: test_breed.py  test_user.py
(+143 files in other folders)
